--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,25 +3,65 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  margin: 0px;
+  padding: 0px;
+
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    margin: 0px;
+    padding: 0px;
   }
 }
 
+html {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  height: auto;
+
+}
+
+
+
+* {
+  box-sizing: border-box;
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+datalist {
+  position: absolute;
+  max-height: 20em;
+  border: 1px solid;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 2;
+}
+
+datalist option {
+  background-color: #ffffff;
+  color: "#000000";
+  font-weight: bold;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+datalist option:hover,
+datalist option:focus {
+  color: #fff;
+  background-color: #036;
+  outline: 0 none;
 }
